--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,16 @@
+[tool.poetry]
+name = "pysmali"
+version = "0.2.5"
+description = "Python library for parsing and unparsing smali files for programatic modification"
+authors = ["Marcel Alexandru Nitan <nitan.marcel@protonmail.com>"]
+license = "Unlicense"
+readme = "README.md"
+packages = [{include = "smali"}]
+
+[tool.poetry.dependencies]
+python = "^3.8"
+
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel",
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
